--- a/workshops.html
+++ b/workshops.html
@@ -9,7 +9,7 @@
 		<title>Eola AI</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="List of workshops hosted by Eola Arts Incubator">
+		<meta name="description" content="List of workshops hosted by Eola AI">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Eola Art Incubator</strong></a>
+						<a href="index.html" class="logo"><strong>Eola AI</strong></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
