--- a/class-digital-venturing-through-AI.html
+++ b/class-digital-venturing-through-AI.html
@@ -9,7 +9,7 @@
 		<title>Eola AI</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="Class by Eola AI to identify and analyze a market opportunity that uses artificial intelligence in its core capabilities.">
+		<meta name="description" content="In this class participants identify and analyze a market opportunity that uses artificial intelligence in its core capabilities.">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -158,7 +158,7 @@
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/company/eola-arts-incubator/" class="icon brands alt fa-linkedin-in" aria-label="LinkedIn"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://discord.gg/BFSyxK6ZHb" class="icon brands alt fa-discord"><span class="label" aria-label="Discord">Discord</span></a></li>
+					<!-- 	<li><a href="https://discord.gg/BFSyxK6ZHb" class="icon brands alt fa-discord"><span class="label" aria-label="Discord">Discord</span></a></li> -->
 						<li><a href="mailto: ayenda@eolaarts.com" class="icon alt fa-envelope"><span class="label" aria-label="Email">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
