--- a/workshops.html
+++ b/workshops.html
@@ -123,7 +123,7 @@
 					<div class="inner">
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/company/eola-arts-incubator/" class="icon brands alt fa-linkedin-in" aria-label="LinkedIn"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://discord.gg/BFSyxK6ZHb" class="icon brands alt fa-discord"><span class="label" aria-label="Discord">Discord</span></a></li>
+						<!-- 	<li><a href="https://discord.gg/BFSyxK6ZHb" class="icon brands alt fa-discord"><span class="label" aria-label="Discord">Discord</span></a></li> -->
 							<li><a href="mailto: ayenda@eolaarts.com" class="icon alt fa-envelope"><span class="label" aria-label="Email">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
