--- a/incubator.html
+++ b/incubator.html
@@ -63,7 +63,8 @@
 								<h1> Art Incubator</h1>
 							</header>
 							<div class="content">
-								<p> We are building generative art apps and models to be used in research and in the classroom. The apps will be deployed in the market on an experimental basis, using a pay what you can model wherever possible.</p>
+								<p> We are building generative art apps and machine learning models to be used in research and in the classroom. 
+									The apps will be deployed in the market on an experimental basis. We will use a pay what you can model wherever possible.</p>
 							</div>
 						</div>
 					</section>
