--- a/about.html
+++ b/about.html
@@ -41,10 +41,10 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
-						<li><a href="classes.html">Classes</a></li>
-						<li><a href="workshops.html">Workshops and Seminars</a></li>
-						<li><a href="about.html">About Us</a></li>
 						<li><a href="research.html">Research</a></li>
+						<li><a href="workshops.html">Workshops and Seminars</a></li>
+						<li><a href="incubator.html">Art Incubator</a></li>
+						<li><a href="about.html">About Us</a></li>
 					</ul>
 					<ul class="actions stacked">
 						<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
