--- a/class-digital-venturing-through-AI.html
+++ b/class-digital-venturing-through-AI.html
@@ -38,9 +38,9 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
-						<li><a href="classes.html">Classes</a></li>
-						<li><a href="workshops.html">Workshops and Seminars</a></li>
 						<li><a href="research.html">Research</a></li>
+						<li><a href="workshops.html">Workshops and Seminars</a></li>
+						<li><a href="incubator.html">Art Incubator</a></li>
 						<li><a href="about.html">About Us</a></li>
 						
 						
