--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="research.html">Research</a></li>
-							<li><a href="classes.html">Classes</a></li>
-							<li><a href="workshops.html">Workshops and Seminars</a></li>
-							<li><a href="about.html">About Us</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="research.html">Research</a></li>
+						<li><a href="workshops.html">Workshops and Seminars</a></li>
+						<li><a href="incubator.html">Art Incubator</a></li>
+						<li><a href="about.html">About Us</a></li>
 							
 						</ul>
 						<ul class="actions stacked">
@@ -90,6 +90,15 @@
 									<header class="major">
 										<h3><a href="research.html" class="link">Research</a></h3>
 										<p>Learn about research we are involved in</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="incubator.html" class="link">Art Incubator</a></h3>
+										<p>Learn about the generative art apps we are developing</p>
 									</header>
 								</article>
 								<article>
