--- a/workshops.html
+++ b/workshops.html
@@ -39,9 +39,8 @@
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="research.html">Research</a></li>
-
-						<li><a href="classes.html">Classes</a></li>
 						<li><a href="workshops.html">Workshops and Seminars</a></li>
+						<li><a href="incubator.html">Art Incubator</a></li>
 						<li><a href="about.html">About Us</a></li>
 						
 					</ul>
