--- a/research.html
+++ b/research.html
@@ -87,7 +87,7 @@
 									<div class="content classes">
 										<div class="inner">
 											<header class="major">
-												<h3>Kemp. A. 2023. “Competitive Advantage through Artificial Intelligence: Toward a Theory of Situated AI.” Academy of Management Review.**</h3>
+												<h3>“Competitive Advantage through Artificial Intelligence: Toward a Theory of Situated AI.” Academy of Management Review.</h3>
 											</header>
 											<p>Author: Ayenda Kemp</p>
 											<ul class="actions">
