--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<h1>Eola AI</h1>
 							</header>
 							<div class="content">
-								<p>Eola AI is a co-learning community and organizational research lab at the intersection of business and technology. We conduct original research to examine how intelligent technologies impact organizations and markets.</p>
+								<p>The Eola Center For Artificial Intelligence in Organizations (Eola AI) is a co-learning community and organizational research lab at the intersection of business and technology. We conduct original research to examine how intelligent technologies impact organizations and markets.</p>
 								<p>We focus on understanding how both entrepreneurs and existing organizations can leverage technologies such as artificial intelligence and blockchain to create and capture value for their primary stakeholders.</p>
 								
 								<ul class="actions">
