--- a/workshops.html
+++ b/workshops.html
@@ -78,12 +78,17 @@
 									<div class="content classes">
 										<div class="inner">
 											<header class="major">
-												<h3>Managing (with) Intelligent Algorithms: Summer Workshop </h3>
+												<h3> AI Strategy: Summer Workshop </h3>
 											</header>
-											<p>This virtual workshop brings together scholars and practitioners interested in advancing our understanding of how intelligent algorithms shift the nature of work, organizing, and strategy. This is a place to discuss new trends observed in practice and the new research making sense of those trends. Tell us what you’re reading and what excites you about new organizational uses of intelligent algorithms. Scholars in all career stages and from all areas of study are invited to participate. </p>
-											<p>Wednesday’s 1 PM – 3 PM EST<br>
-												July 5th 2023 – July 26th 2023</p>
-												
+											<p>This virtual workshop brings together scholars and practitioners interested in understanding new research on the strategic management of artificial intelligence.  
+												In each session, Dr. Kemp will briefly introduce the emerging theories surrounding that week's topic. Participants then discuss those ideas in an open forum. 
+													</p>
+											<p>     July 13, 2023 at 9 AM: Data Network Effects vs. Situated AI<br>
+												July 20, 2023 at 9 AM: Value Expropriation in the Situated AI Framework <br>
+												July 27, 2023 at 9 AM: The Role of Machine Agency in AI Strategy </p>
+											
+ 
+ 	
 										<!--	<p>*The dates may change based on speaker availability. </p> -->
 											<ul class="actions">
 												<li><a href="sign-up.html" class="button">Sign Up</a></li>
