--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
 									<p>Ayenda is an organizational researcher. He is interested in understanding how technology facilitates novel modes of organizing collective production in firms and markets.</p>
 									<p>Ayenda holds a doctorate in Organizational Theory from the University of Texas at Dallas, where he used computer simulations to study how firms leverage social networks to develop new expertise at the individual level and new capabilities at the organizational level. He also holds an M.S. in Statistical Computing, and a B.S. in Mathematics from the University of Central Florida.</p>
 									<p>Ayenda's current work focuses on discovering and capturing opportunities in markets and firms using new technologies such as blockchain and generative AI. His work appears or is forthcoming in the Academy of Management Review and the Academy of Management Best Paper Proceedings. (Curriculum Vitae).</p>
-									<p> Before serving as the president of Eola Art Incubator, Ayenda served as a tenure-track faculty member at Virginia Tech’s Pamplin School of Business, where he taught strategic management and analytics. Ayenda is currently without a university home.</p>
+									<p> Before serving as the president of Eola AI, Ayenda served as a tenure-track faculty member at Virginia Tech’s Pamplin School of Business, where he taught strategic management and analytics. Ayenda is currently without a university home.</p>
 								</div>
 							</div>
 
