--- a/about2.html
+++ b/about2.html
@@ -101,7 +101,7 @@
 							<section id="one">
 							<div class="inner">
 								<div class="headshotContainer">
-									<img class="headshotImg" src="./images/ sharvaree_headshot.jpg " alt="" />
+									<img class="headshotImg" src="./images/sharvaree_headshot.jpg " alt="" />
 								</div>
 								<header class="major center">
 									<h2>Sharveree Mane</h2>
