--- a/about2.html
+++ b/about2.html
@@ -105,7 +105,7 @@
 								</div>
 								<header class="major center">
 									<h2>Sharveree Mane</h2>
-									<span> Research Intern - Generative AI </span>
+									<span> Research Intern - Generative AI Lead </span>
 								</header>
 								<div class="center">
 									<p>As a Research Intern for the Gen AI Project at Eola AI, Sharvaree is actively engaged in exploring the intersection of technology and business. With a passion for blending technology with art, Sharvaree's work focuses on understanding how intelligent technologies, such as artificial intelligence and blockchain, impact organizations and markets.</p>
